erDiagram
    CUSTOMERS ||--o{ ORDERS : places
    CATEGORIES ||--o{ PRODUCTS : groups
    ORDERS ||--|{ ORDER_ITEMS : contains
    PRODUCTS ||--o{ ORDER_ITEMS : "appears in"
    ORDERS ||--o{ PAYMENTS : "settled by"

    CUSTOMERS {
        int customer_id PK
        varchar first_name
        varchar last_name
        varchar email
        varchar phone
        varchar address
        date created_at
    }

    CATEGORIES {
        int category_id PK
        varchar name
        varchar description
    }

    PRODUCTS {
        int product_id PK
        varchar name
        text description
        decimal price
        int stock_quantity
        int category_id FK
    }

    ORDERS {
        int order_id PK
        int customer_id FK
        date order_date
        varchar status
        decimal total_amount
    }

    ORDER_ITEMS {
        int order_item_id PK
        int order_id FK
        int product_id FK
        int quantity
        decimal unit_price
    }

    PAYMENTS {
        int payment_id PK
        int order_id FK
        date payment_date
        decimal amount
        varchar payment_method
        varchar status
    }
